fixes gap at top of menu

--- a/styles.css
+++ b/styles.css
@@ -104,13 +104,12 @@ nav ul {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding: 0 0 0 2rem;
+  padding: 60px 0 0 2rem;
   position: absolute;
   z-index: 6;
   right: 0;
-  top: -100vh;
-  transition: ease-in-out 0.5s;
-  margin-top: 4rem;
+  top: -100%;
+  transition: ease-in-out 0.75s;
   box-shadow: -5px 5px 8px 1px rgba(0, 8, 57, 0.5),
     -15px 20px 3px rgba(0, 8, 57, 0.1);
 }
@@ -248,6 +247,7 @@ hr {
 "transform-style: preserve-3d" and "z-index: -1"
 */
 header {
+  padding-top: 60px;
   position: relative;
   display: flex;
   justify-content: center;
